# zerotime

./: .gitignore  .mypy_cache  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release.yml
docs/: ANTI_PATTERNS.md  API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT.md  FUNCTIONAL_ANALYSIS.md
examples/: 01_basic_usage.py  02_dsl_syntax.py  03_rule_combination.py  04_generation_methods.py  05_navigation.py  06_timezones.py  07_configuration.py  08_json_serialization.py  09_builder_methods.py  10_real_world_examples.py  README.md
src/zerotime/: __init__.py  core.py
tests/: test_config.py  test_core.py  test_edge_cases.py
